--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -8,7 +8,7 @@
     <a href="/" class="lang-logo">
       <img src="/static/lang-logo.png">
     </a>
-    <h1>Getting Started with Go</h1>
+    <h1>My Awesome App v2</h1>
       <p>This is a sample Go application. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the platform.</p>
       <a type="button" class="btn btn-lg btn-default" href="https://www.koli.com.br"><span class="glyphiconglyphicon-flash"></span> About us</a>
       <a type="button" class="btn btn-lg btn-primary" href="https://github.com/kolihub/go-getting-started"><span class="glyphiconglyphicon-download"></span> Source on GitHub</a>
